# headless-steam-gamescope

./: .gitignore  Dockerfile  README.md  docker-compose.yml  quickstart.sh
config/: encoders.toml  single-session.toml
rootfs/etc/cont-init.d/: system-services.sh
rootfs/opt/steam-stream/: entrypoint.sh  pulse-sink.sh  startup-app.sh
server/: CMakeLists.txt  Dockerfile  build-server.sh  build.sh
server/src/gst-plugin/: audio.hpp  gstrtpmoonlightpay_audio.cpp  gstrtpmoonlightpay_audio.hpp  gstrtpmoonlightpay_video.cpp  plugin.cpp  utils.hpp  video.hpp
server/src/helpers/: logger.hpp
server/src/moonlight-protocol/crypto/src/: crypto.cpp  sign.hpp  utils.cpp  x509.cpp
server/src/moonlight-protocol/rtsp/: parser.hpp
server/src/server/: control.cpp  control.hpp  control_packets.hpp  encoder_config.cpp  encoder_config.hpp  fake_udev.cpp  fake_udev.hpp  https_server.cpp  https_server.hpp  launcher.cpp  launcher.hpp  main.cpp  media.cpp  media.hpp  moonlight_proto.cpp  moonlight_proto.hpp  pointer_sync.cpp  pointer_sync.hpp  rest_helpers.hpp  rtsp_commands.hpp  rtsp_server.cpp  rtsp_server.hpp  servers.cpp  servers.hpp  session.hpp  state.cpp  state.hpp  uinput.cpp  uinput.hpp
server/tests/: m5-verify.Dockerfile  run-tests.sh
server/tests/integration/: test_uinput.cpp  verify-endpoints.sh  verify-launch.sh  verify-m6-image.sh  verify-m7-fixes.sh  verify-m8-steam.sh  verify-m9-resume.sh  verify-media.sh
server/tests/unit/: test_aes.cpp  test_control.cpp  test_fec.cpp  test_pairing.cpp  test_resume_key.cpp  test_rtsp.cpp  test_session_key.cpp  test_xml.cpp
